Update isitup? url

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -23,6 +23,6 @@
       <dd>2121</dd>
     </dl>
   </li>
-  <li><a href="http://do.avacariu.me/isitup">Is it up?</a></li>
+  <li><a href="http://isitup.80x24.ca">Is it up?</a></li>
 </ul>
 {% endblock %}
