--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,14 @@
     {% else %}
     <title>Main page - Andrei's utilities</title>
     {% endif %}
+
+    <style>
+      body {
+        max-width: 700px;
+        margin: 0 auto;
+        padding: 1rem;
+      }
+    </style>
   </head>
   <body>
     {% block content %}{% endblock %}
