Add a link to my new timer.

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -25,7 +25,10 @@
   <dt><a href="{{ url_for('fortune') }}">Fortune</a> (GET)</dt>
   <dd>Responds with whatever <code>fortune</code> outputs.</dd>
 
-  <dt><a href="http://isitup.80x24.ca">Is it up?</a></dt>
+  <dt><a href="https://isitup.80x24.ca">Is it up?</a></dt>
   <dd>Keeps track of which of your machines are up.</dd>
+
+  <dt><a href="https://timer.80x24.ca">Pomodoro-style timer</a></dt>
+  <dd>Keeps you on track.</dd>
 </dl>
 {% endblock %}
