Add amionline to list

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -30,5 +30,8 @@
 
   <dt><a href="https://timer.80x24.ca">Pomodoro-style timer</a></dt>
   <dd>Keeps you on track.</dd>
+
+  <dt><a href="https://amionline.80x24.ca">Am I Online?</a></dt>
+  <dd>Your app can now figure out if it's online.</dd>
 </dl>
 {% endblock %}
