Mention which utilities have their own sites

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -3,6 +3,8 @@
 <h1>Utilities</h1>
 <p>These are just some small utilities I made to help me out. They might be of some use to other people.</p>
 <p>There is absolutely no formatting. Output is just sent to the browser with <code>mimetype="text/plain"</code>.</p>
+
+<h2>Utilities hosted on this site</h2>
 <dl>
   <dt><a href="{{ url_for('my_ip') }}">IP address</a> (GET)</dt>
   <dd>Responds your external IP address.</dd>
@@ -24,7 +26,10 @@
 
   <dt><a href="{{ url_for('fortune') }}">Fortune</a> (GET)</dt>
   <dd>Responds with whatever <code>fortune</code> outputs.</dd>
+</dl>
 
+<h2>Utilities with their own sites</h2>
+<dl>
   <dt><a href="https://isitup.80x24.ca">Is it up?</a></dt>
   <dd>Keeps track of which of your machines are up.</dd>
 
