Rename my_ip to ip in main.html

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -6,7 +6,7 @@
 
 <h2>Utilities hosted on this site</h2>
 <dl>
-  <dt><a href="{{ url_for('my_ip') }}">IP address</a> (GET)</dt>
+  <dt><a href="{{ url_for('ip') }}">IP address</a> (GET)</dt>
   <dd>Responds your external IP address.</dd>
 
   <dt><a href="{{ url_for('user_agent') }}">User agent string</a> (GET)</dt>
