Improve styling with some new fonts

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,11 +7,21 @@
     <title>Main page - Andrei's utilities</title>
     {% endif %}
 
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,400italic,500|Ubuntu+Mono' rel='stylesheet' type='text/css'>
+
     <style>
       body {
         max-width: 700px;
         margin: 0 auto;
         padding: 1rem;
+        font-family: "Roboto", sans-serif;
+        line-height: 1.5;
+      }
+      code, pre {
+        font-family: "Ubuntu Mono", monospace;
+      }
+      dd {
+        margin-bottom: 1rem;
       }
     </style>
   </head>
