Improve styling on request type description

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,6 +23,11 @@
       dd {
         margin-bottom: 1rem;
       }
+      .request-type {
+        font-family: "Ubuntu Mono", monospace;
+        font-size: 0.9em;
+        margin-left: 0.5em;
+      }
     </style>
   </head>
   <body>
