--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -6,25 +6,25 @@
 
 <h2>Utilities hosted on this site</h2>
 <dl>
-  <dt><a href="{{ url_for('ip') }}">IP address</a> (GET)</dt>
+  <dt><a href="{{ url_for('ip') }}">IP address</a> <span class="request-type">(GET)<span></dt>
   <dd>Responds your external IP address.</dd>
 
-  <dt><a href="{{ url_for('user_agent') }}">User agent string</a> (GET)</dt>
+  <dt><a href="{{ url_for('user_agent') }}">User agent string</a> <span class="request-type">(GET)</span></dt>
   <dd>Responds with your user agent string</dd>
 
-  <dt><a href="{{ url_for('request_body') }}">Request body</a> (GET | POST)</dt>
+  <dt><a href="{{ url_for('request_body') }}">Request body</a> <span class="request-type">(GET | POST)</span></dt>
   <dd>Responds with the body of the POST request you just sent.</dd>
 
-  <dt><a href="{{ url_for('request_headers') }}">Request headers</a> (GET | POST)</dt>
+  <dt><a href="{{ url_for('request_headers') }}">Request headers</a> <span class="request-type">(GET | POST)</span></dt>
   <dd>Responds with the headers of the request you just sent.</dd>
 
-  <dt><a href="{{ url_for('md5sum') }}">md5sum</a> (GET | POST)</dt>
+  <dt><a href="{{ url_for('md5sum') }}">md5sum</a> <span class="request-type">(GET | POST)</span></dt>
   <dd>Computes MD5 hash. Pass <code>text=TEXT</code> as a parameter. Default is <code>''</code>.</dd>
 
-  <dt><a href="{{ url_for('sha1sum') }}">SHA sums</a> (GET | POST)</dt>
+  <dt><a href="{{ url_for('sha1sum') }}">SHA sums</a> <span class="request-type">(GET | POST)</span></dt>
   <dd>Computes SHA sums. Pass <code>ver=256&amp;text=TEXT</code> as parameters. Available versions are 1, 224, 256, 384 and 512. Default is <code>sha1('')</code>.</dd>
 
-  <dt><a href="{{ url_for('fortune') }}">Fortune</a> (GET)</dt>
+  <dt><a href="{{ url_for('fortune') }}">Fortune</a> <span class="request-type">(GET)</span></dt>
   <dd>Responds with whatever <code>fortune</code> outputs.</dd>
 </dl>
 
