Fix an unclosed tag

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -6,7 +6,7 @@
 
 <h2>Utilities hosted on this site</h2>
 <dl>
-  <dt><a href="{{ url_for('ip') }}">IP address</a> <span class="request-type">(GET)<span></dt>
+  <dt><a href="{{ url_for('ip') }}">IP address</a> <span class="request-type">(GET)</span></dt>
   <dd>Responds your external IP address.</dd>
 
   <dt><a href="{{ url_for('user_agent') }}">User agent string</a> <span class="request-type">(GET)</span></dt>
